Fix input appearance on iOS

--- a/public/my-style.css
+++ b/public/my-style.css
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-  background: #fff; /* #f7f7f7; #fff */
+  background: #fff; 
   color: #37474F;
   font-family: Raleway, sans-serif;
   letter-spacing: 0.02em;
@@ -48,7 +48,6 @@ h1 {
   letter-spacing: 0.04em;
   padding: 0.6em;
   text-align: center;
-  /*text-transform: uppercase;*/
 }
 
 p {
@@ -92,9 +91,15 @@ p {
 }
 
 input {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
   border: 1px solid #F2928C ; 
+  -webkit-border-radius: 0;
+  border-radius: 0;
   color: #37474F;
   font-size: 1rem;
+  height: 3em;
   letter-spacing: 0.02em;
   padding: 0.8em;
   margin: 0 0 1rem;
@@ -124,8 +129,9 @@ input[type="submit"] {
   cursor: pointer;
   display: block;
   font-family: Raleway, sans-serif;
-  font-size: 0.8rem;
-  letter-spacing: 0.05em;
+  font-size: 0.95rem;
+  font-weight: 500;
+  letter-spacing: 0.07em;
   margin: 0 auto;
   padding-left: 1.5em;
   padding-right: 1.5em;
@@ -181,6 +187,11 @@ code {
   input,
   input[type="submit"] {
     font-size: 0.85rem;
+  }
+  
+  input[type="submit"] {
+    font-weight: 400;
+    height: 2.8em;
   }
 }
 
